test/scc/type/semantic-errors/001.a
001.t:6:9: error: incomplete type is not allowed